# processamento-grafico

./: .gitignore  .gitmodules  README.md
aula-01/: CMakeLists.txt  RESULT.md
aula-01/src/: CMakeLists.txt  Source.cpp
cmake/: AddGLFW.cmake  AddGLM.cmake  AddGlad.cmake  AddGoogleTest.cmake  CrossCompile.cmake  GenerateFromTemplate.cmake  SetDefaultBuild.cmake  SyncSubmodules.cmake  TemplateShader.cmake
lista1/: CMakeLists.txt  README.md
lista1/images/: nove.excalidraw
lista1/lib/: CMakeLists.txt  shader.cpp  shader.h  simpleTwodVaoBuilder.cpp  simpleTwodVaoBuilder.h  twod.cpp  twod.h  vaoBuilder.cpp  vaoBuilder.h
lista1/shaders/: nove.frag  nove.vert
lista1/src/: CMakeLists.txt  Source.cpp  cinco.cpp  nove.cpp  oito.cpp  seis.cpp  sete.cpp
lista1/tests/: CMakeLists.txt
lista1/tests/lib/: CMakeLists.txt  twod.cpp
lista2/: CMakeLists.txt  README.md
lista2/apps/: CMakeLists.txt  cinco.cpp  dois.cpp  quatro.cpp  tres.cpp  um.cpp
lista2/shaders/: um.frag  um.vert
lista2/src/: CMakeLists.txt  vaoBuilder.cpp  vaoBuilder.h
lista2/templates/: shaderSource.h.in
